--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,18 @@
   "license": "MIT",
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
-    "sqlite3": "^5.0.0",
+    "pg": "^8.4.1",
     "typeorm": "^0.2.28",
     "yup": "^0.29.3"
   },
   "scripts": {
+    "start": "node dist/server.js",
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
+    "build": "tsc",
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "devDependencies": {
